--- a/Music Advisor/task/build.gradle
+++ b/Music Advisor/task/build.gradle
@@ -12,6 +12,8 @@ dependencies {
     implementation 'com.google.code.gson:gson:+'
     // https://mvnrepository.com/artifact/com.google.guava/guava
     implementation group: 'com.google.guava', name: 'guava', version: '11.0.2'
+    // https://mvnrepository.com/artifact/org.apache.commons/commons-lang3
+    implementation group: 'org.apache.commons', name: 'commons-lang3', version: '3.0'
 
 }
 
