--- a/Music Advisor/task/build.gradle
+++ b/Music Advisor/task/build.gradle
@@ -9,7 +9,7 @@ repositories {
 }
 
 dependencies {
-    implementation 'com.google.code.gson:gson:+'
+    implementation 'com.google.code.gson:gson:2.10'
     // https://mvnrepository.com/artifact/com.google.guava/guava
     implementation group: 'com.google.guava', name: 'guava', version: '11.0.2'
     // https://mvnrepository.com/artifact/org.apache.commons/commons-lang3
