--- a/Music Advisor/task/build.gradle
+++ b/Music Advisor/task/build.gradle
@@ -14,7 +14,7 @@ dependencies {
     implementation group: 'com.google.guava', name: 'guava', version: '11.0.2'
     // https://mvnrepository.com/artifact/org.apache.commons/commons-lang3
     implementation group: 'org.apache.commons', name: 'commons-lang3', version: '3.0'
-
+    testImplementation('org.junit.jupiter:junit-jupiter:5.8.2')
 }
 
 jar {
@@ -24,4 +24,9 @@ jar {
     from {
         configurations.compile.collect { it.isDirectory() ? it : zipTree(it) }
     }
+}
+
+
+test {
+    useJUnitPlatform()
 }
